@@ -1,5 +1,5 @@
 .LL 8i
-.TH vchkpass 1
+.TH vchkpass 8
 .SH NAME
 .PP
 vchkpass \- checkpassword program for IndiMail authentication
