@@ -1515,6 +1515,10 @@ qmail-remote(8),
 qmail-send(8),
 qmail-spamdb(8),
 qmail-recipients(8),
+pam-multi(8),
+pam-checkpwd(8),
+vchkpass(8),
+systpass(8),
 greydaemon(8),
 rfc-2821(5),
 rfc-1893(5),
@@ -1523,7 +1527,7 @@ rfc-1985(5),
 rfc-2645(5),
 rfc-1321(5),
 rfc-822(5),
-rfc-2104(5)
+rfc-2104(5),
 rfc-2476(5)
 .SH "HISTORY"
 The patch enabling the ESMTP AUTH and CheckUserSmtp and CheckRelay option is not part of the
